application/frontend/src/pages/Explorer/explorer.scss
main#explorer-content {
  padding: 30px;

  .search-field {
    input {
      font-size: 16px;
      height: 32px;
      width: 320px;
      margin-bottom: 10px;
      border-radius: 3px;
      border: 1px solid #858585;
      padding: 0 5px;
    }
  }

  #graphs-menu {
    display: flex;
    margin-bottom: 20px;
    .menu-title {
      margin: 0 10px 0 0;
    }
    ul {
      list-style: none;
      padding: 0;
      margin: 0;
      display: flex;
      font-size: 15px;
    }
    li {
      padding: 0 8px;
      + li {
        border-left: 1px solid #b1b0b0;
      }
      &:first-child {
        padding-left: 0;
      }
    }
  }

  .list {
    padding: 0;
    width: 100%;
  }

  .arrow {
    .icon {
      transform: rotate(-90deg);
    }
    &.active {
      .icon {
        transform: rotate(0);
      }
    }
    &:hover {
      cursor: pointer;
    }
  }

  .item {
    border-top: 1px dotted lightgrey;
    border-left: 6px solid lightgrey;
    margin: 4px 4px 4px 40px;
    background-color: rgba(200, 200, 200, 0.2);
    vertical-align: middle;

    .content {
      display: flex;
      flex-wrap: wrap;
    }

    .header {
      margin-left: 5px;
      overflow: hidden;
      white-space: nowrap;
      display: flex;
      align-items: center;
      vertical-align: middle;

      > a {
        font-size: 120%;
        line-height: 30px;
        font-weight: bold;
        max-width: 100%;
        white-space: normal;
      }

      .cre-code {
        margin-right: 4px;
        color: grey;
      }
    }

    .description {
      margin-left: 20px;
    }
  }

  .highlight {
    background-color: yellow;
  }

  > .list > .item {
    margin-left: 0;
  }
}

@media (min-width: 0px) and (max-width: 770px) {
  #graphs-menu {
    flex-direction: column;
  }
}

